# EVA-OTA-Sample

./: LICENSE  README.md
ADLINK_Agent/: AdlinkAgent.c  AdlinkAgent.h  AgentScript.sh  deviceInfo.h  eva.h  meson.build
ADLINK_Agent/include/: eva.h
